change capitalization of GH

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -16,9 +16,9 @@
 \acrodef{OUCH}{\ac{OU} Comparative Hypotheses}
 \acrodef{TSI}{Tissue Specificity Index}
 \acrodef{SRA}{Sequence Read Archive}
-\acrodef{GH}{growth hormone}
-\acrodef{PSG}{pregnancy-specific glycoprotein}
-\acrodef{PAG}{pregnancy-associated glycoprotein}
+\acrodef{GH}{Growth Hormone}
+\acrodef{PSG}{Pregnancy-Specific Glycoprotein}
+\acrodef{PAG}{Pregnancy-Associated Glycoprotein}
 \acrodef{GO}{Gene Ontology}
 \acrodef{FDR}{False Discovery Rate}
 
